# LumaDB

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.optimized  LICENSE  Makefile  README.md  docker-compose.monitoring.yml  install.yaml  jest.config.js  package.json  prometheus.yml
.github/workflows/: ci.yml  release.yml  tdengine-tests.yml
benchmarks/: go_bench_test.go  python_bench.py  rust_bench.rs
configs/: lumadb.production.yaml
deploy/: crd.yaml  operator.yaml
deploy/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/kubernetes/: configmap.yaml  namespace.yaml  rbac.yaml  service.yaml  statefulset.yaml
deploy/systemd/: install.sh  lumadb.service
deploy/windows/: install.ps1
docs/: PRD.md  README.md  SUPERSET_INTEGRATION.md  architecture_design.md  cicd_setup.md  deployment_guide.md  hardware_requirements.md  index.md  security_audit.md  security_report.md  tdengine-compatibility.md  technical_specification.md  training_manual.md  user_manual.md  video_training_scripts.md
docs/api-reference/: api_reference.md
docs/consultancy/: README.md  api-sdk-manual.md  capabilities-xray.md  enterprise-solutions.md  go-to-market-strategy.md  how-to-guides.md  operations-manual.md  services-overview.md  tech-stack-reference.md
docs/deployment/: deployment_guide.md
docs/getting-started/: quickstart.md
docs/tutorials/: quickstart.md
go-cluster/: go.mod  go.sum
go-cluster/operator/: main.go
go-cluster/proto/: luma.proto
k8s/: deployment.yaml  lumadb.yaml  service.yaml  statefulset.yaml
lumadb-compat/: Cargo.toml  Dockerfile  README.md  check_output.txt  config.toml  release.sh  test_output.txt
lumadb-compat/config/: default.toml
lumadb-compat/connectors/trino-luma/: pom.xml
lumadb-compat/connectors/trino-luma/src/main/java/io/lumadb/trino/: LumaConnector.java  LumaConnectorFactory.java  LumaMetadata.java  LumaPlugin.java  Stubs.java
lumadb-compat/crates/luma-benchmark/: Cargo.toml
lumadb-compat/crates/luma-benchmark/src/: main.rs
lumadb-compat/crates/luma-cassandra/: Cargo.toml
lumadb-compat/crates/luma-cassandra/src/: lib.rs  translator.rs
lumadb-compat/crates/luma-cassandra/src/cluster/: gossip.rs  mod.rs  topology.rs
lumadb-compat/crates/luma-cassandra/src/cql/: parser.rs  types.rs
lumadb-compat/crates/luma-cassandra/src/protocol/: auth.rs  frame.rs  messages.rs  mod.rs  tests.rs
lumadb-compat/crates/luma-core/: Cargo.toml  build.rs
lumadb-compat/crates/luma-core/proto/: luma.proto
lumadb-compat/crates/luma-core/src/: ai.rs  ir.rs  lib.rs  processor.rs  remote.rs  security.rs  transactions.rs  types.rs
lumadb-compat/crates/luma-core/src/compression/: gorilla.rs  log.rs  mod.rs
lumadb-compat/crates/luma-core/src/indexing/: bitmap.rs  hll.rs  inverted.rs  mod.rs  vector.rs
lumadb-compat/crates/luma-core/src/ingestion/: mod.rs  prometheus.rs
lumadb-compat/crates/luma-core/src/ir/: mod.rs  planner.rs
lumadb-compat/crates/luma-core/src/parsing/: mod.rs  promql.rs
lumadb-compat/crates/luma-core/src/query/: batch.rs  executor.rs  mod.rs  promql_engine.rs  simd.rs
lumadb-compat/crates/luma-core/src/storage/: columnar.rs  log_store.rs  metric_store.rs  mod.rs  object_store.rs  segment.rs  tiering.rs  trace_store.rs  utils.rs  wal.rs
lumadb-compat/crates/luma-core/src/stream/: join.rs  mod.rs  view.rs  window.rs  window_view.rs
lumadb-compat/crates/luma-core/src/vector/: hnsw.rs  mod.rs  quantization.rs
lumadb-compat/crates/luma-core/tests/: storage_tests.rs  wal_tests.rs
lumadb-compat/crates/luma-influxdb/: Cargo.toml
lumadb-compat/crates/luma-influxdb/src/: lib.rs  parser.rs
lumadb-compat/crates/luma-mongodb/: Cargo.toml
lumadb-compat/crates/luma-mongodb/src/: lib.rs  tests.rs  translator.rs
lumadb-compat/crates/luma-mongodb/src/bson/: types.rs
lumadb-compat/crates/luma-mongodb/src/compat/: commands.rs  crud.rs
lumadb-compat/crates/luma-mongodb/src/mql/: aggregation.rs  mod.rs  parser.rs
lumadb-compat/crates/luma-mongodb/src/protocol/: legacy.rs  mod.rs  op_msg.rs  op_query.rs  op_reply.rs  wire.rs
lumadb-compat/crates/luma-mysql/: Cargo.toml
lumadb-compat/crates/luma-mysql/src/: lib.rs  translator.rs  types.rs
lumadb-compat/crates/luma-mysql/src/compat/: information_schema.rs  mod.rs  variables.rs
lumadb-compat/crates/luma-mysql/src/parser/: mod.rs
lumadb-compat/crates/luma-mysql/src/protocol/: auth.rs  handshake.rs  mod.rs  packets.rs
lumadb-compat/crates/luma-postgres/: Cargo.toml
lumadb-compat/crates/luma-postgres/benches/: protocol_bench.rs
lumadb-compat/crates/luma-postgres/src/: lib.rs  translator.rs  types.rs
lumadb-compat/crates/luma-postgres/src/protocol/: auth.rs  messages.rs  mod.rs  startup.rs
lumadb-compat/crates/luma-prometheus/: Cargo.toml  build.rs
lumadb-compat/crates/luma-prometheus/proto/: prometheus.proto
lumadb-compat/crates/luma-prometheus/src/: lib.rs
lumadb-compat/crates/luma-server/: Cargo.toml
lumadb-compat/crates/luma-server/src/: api_vector.rs  config.rs  connection.rs  grpc.rs  infrastructure.rs  main.rs  metrics.rs  server.rs  wal.rs
lumadb-compat/crates/luma-server/src/protocols/: cassandra.rs  mod.rs  mongodb.rs  otlp.rs  postgres.rs  prometheus.rs  redis.rs
lumadb-compat/crates/luma-server/src/protocols/redis/: cluster.rs  pubsub.rs  scripting.rs  streams.rs
lumadb-compat/crates/luma-server/tests/: unit_tests.rs
lumadb-compat/crates/luma-tools/: Cargo.toml
lumadb-compat/docker/: Dockerfile  docker-compose.yml
lumadb-compat/extensions/ai/: analyzer.py
python-ai/tdbai/: embedding_onnx.py  ingestion.py  promptql.py  vector_gpu.py  vector_service.py
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/benches/: vector_bench.rs
rust-core/src/: lib.rs
rust-core/tests/: shard_tests.rs  tsdb_compat_tests.rs
scripts/: build.sh  deploy.sh
src/: index.ts
src/cli/: index.ts
src/client/: index.ts
src/core/: Collection.ts  Database.ts  Document.ts  Transaction.ts
src/indexing/: BTreeIndex.ts  HashIndex.ts  (+2 more)
tests/: database.test.ts  tdengine_compatibility_test.go  tdengine_integration_test.go
(+124 files in other folders)
