[workspace]
resolver = "2"
members = [
    "crates/luma-core",
    "crates/luma-postgres",
    "crates/luma-mysql",
    "crates/luma-cassandra", 
    "crates/luma-mongodb",
    # "crates/luma-tools", # Commented out as likely not completely structured yet
    "crates/luma-server",
    "crates/luma-tools",
    # "tools/repairer",
    # "extensions/vector",
    # "extensions/geo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LumaDB Contributors"]
license = "Apache-2.0"
repository = "https://github.com/lumadb/lumadb-compat"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
byteorder = "1.5"

# Serialization
bytes = { version = "1.5", features = ["serde"] }
bson = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Parsing
sqlparser = { version = "0.43", features = ["visitor"] }
nom = "7.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing  
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
scram = "0.7"
md5 = "0.7"
rand = "0.8"
base64 = "0.21"

# Networking
rustls = "0.23"
rustls-pemfile = "2.0"
socket2 = "0.5"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Metrics
prometheus = "0.13"
metrics = "0.22"

# Compression
lz4 = "1.24"
snap = "1.1"
zstd = "0.13"
flate2 = "1.0"

# Internal crates
luma-protocol-core = { path = "crates/luma-core" }
luma-postgres = { path = "crates/luma-postgres" }
luma-mysql = { path = "crates/luma-mysql" }
luma-cassandra = { path = "crates/luma-cassandra" }
luma-mongodb = { path = "crates/luma-mongodb" }
# luma-tools = { path = "crates/luma-tools" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = true

[profile.bench]
debug = true
