[package]
name = "luma-cassandra"
version = "0.1.0"
edition = "2021"

[dependencies]
luma-protocol-core = { path = "../luma-core" }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
lz4 = "1.28.1"
snap = "1.1.1"
