[package]
name = "luma-protocol-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true }
sqlparser = { workspace = true }
futures = "0.3"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"
