[package]
name = "luma-mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
tokio = { version = "1.35", features = ["full", "io-util"] }
thiserror = "1.0"
bitflags = "2.4"
luma-protocol-core = { path = "../../crates/luma-core" }
serde_json = { workspace = true }
bson = { workspace = true }
anyhow = { workspace = true }
snap = { workspace = true }
flate2 = "1.1.5"
zstd = "0.13.3"
chrono.workspace = true

[dev-dependencies]
anyhow = "1.0"
