[package]
name = "luma-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["postgres", "mysql", "cassandra", "mongodb"]
postgres = ["dep:luma-postgres"]
mysql = ["dep:luma-mysql"]
cassandra = ["dep:luma-cassandra"]
mongodb = ["dep:luma-mongodb"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
lazy_static = "1.4"
warp = "0.3"

luma-protocol-core = { workspace = true }
luma-postgres = { workspace = true, optional = true }
luma-mysql = { workspace = true, optional = true }
luma-cassandra = { workspace = true, optional = true }
luma-mongodb = { workspace = true, optional = true }
