[package]
name = "luma-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["influxdb", "prometheus"]
# full = ["postgres", "mysql", "cassandra", "mongodb", "influxdb", "prometheus"]
postgres = ["dep:luma-postgres"]
mysql = ["dep:luma-mysql"]
influxdb = ["dep:luma-influxdb"]
prometheus = ["dep:luma-prometheus"]
cassandra = ["dep:luma-cassandra"]
mongodb = ["dep:luma-mongodb"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
warp = { workspace = true }
bytes = "1.0"
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-proto = { workspace = true }
hex = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
prometheus = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
tokio-stream = "0.1"
lazy_static = "1.4"
rand = { workspace = true }
md5 = { workspace = true }
luma-protocol-core = { path = "../luma-core" }
luma-postgres = { path = "../luma-postgres", optional = true }
luma-mysql = { path = "../luma-mysql", optional = true }
luma-cassandra = { path = "../luma-cassandra", optional = true }
luma-mongodb = { path = "../luma-mongodb", optional = true }
luma-influxdb = { path = "../luma-influxdb", optional = true }
luma-prometheus = { path = "../luma-prometheus", optional = true }
